--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,16 @@
 
         <service
             android:name=".NotificationService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.cameocoder.capstoneproject.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
