--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="com.cameocoder.capstoneproject.app.ACTION_DATA_UPDATED" />
+                <action android:name="com.cameocoder.capstoneproject.app.ACTION_DATA_UPDATE_FAILED" />
             </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
