Update build config for Android Studio 3.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.getkeepsafe.dexcount'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion rootProject.buildToolsVersion
     defaultConfig {
         applicationId "com.cameocoder.capstoneproject"
         minSdkVersion 16
@@ -30,24 +30,19 @@ android {
     }
 }
 
-def supportVersion = '25.2.0'
-def playVersion = '10.2.0'
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile "com.android.support:support-annotations:$supportVersion"
-    compile "com.android.support:appcompat-v7:$supportVersion"
-    compile "com.android.support:support-v4:$supportVersion"
-    compile "com.android.support:design:$supportVersion"
-    compile "com.android.support:recyclerview-v7:$supportVersion"
-    compile "com.android.support:support-v4:$supportVersion"
-    compile "com.android.support:support-vector-drawable:$supportVersion"
-    compile "com.google.android.gms:play-services-gcm:$playVersion"
-    compile "com.google.android.gms:play-services-location:$playVersion"
-    compile "com.google.android.gms:play-services-places:$playVersion"
+    compile 'com.android.support:support-annotations:' + rootProject.supportLibVersion;
+    compile 'com.android.support:appcompat-v7:' + rootProject.supportLibVersion;
+    compile 'com.android.support:support-v4:' + rootProject.supportLibVersion;
+    compile 'com.android.support:design:' + rootProject.supportLibVersion;
+    compile 'com.android.support:recyclerview-v7:' + rootProject.supportLibVersion;
+    compile 'com.android.support:support-v4:' + rootProject.supportLibVersion;
+    compile 'com.android.support:support-vector-drawable:' + rootProject.supportLibVersion;
+    compile 'com.google.android.gms:play-services-gcm:' + rootProject.playLibVersion;
+    compile 'com.google.android.gms:play-services-location:' + rootProject.playLibVersion;
+    compile 'com.google.android.gms:play-services-places:' + rootProject.playLibVersion;
+
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
@@ -57,7 +52,11 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
 
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 }
